--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,20 +1,80 @@
 * {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 0;
-    margin: 0;
+    font-family: 'Source Code Pro', monospace;
+    
+}
+body{
+    background-color: lightskyblue;
+    background-attachment: fixed;
+    background-image: url("https://wallpaperaccess.com/full/449903.jpg");    
 }
 
-.dashboard {
-    margin-top: 40px;
-    margin-bottom: 40px;
+/* navbar settings here */
+.bd-navbar {
+    background-color:  rgb(103, 182, 231);
+}
+.navbar-nav{
+    position: relative;
+    margin-left: 70% !important;
+}
+
+.dashboard{
+    text-align: center;
+}
+.headerbg{
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 10px;
 }
 
 div {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    word-wrap: break-word;
+    
+}
+/* c1 determins the entire column setting */
+.c1{
+    margin-top: 45px;
+    margin-left: 20px;
+}
+/* c2 determins the values for the rows and columns  */
+.c2{
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 30px;  
+}
+.c3{
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-bottom: 30px;  
 }
 
-p {
+h1{
     margin-top: 10px;
-    margin-bottom: 10px;
+}
+/* hr for border separator */
+hr { display: block; 
+    /* margin-before: 0.5em; 
+    margin-after: 0.5em; 
+    margin-start: auto; 
+    margin-end: auto;  */
+    overflow: hidden; 
+    border-style: inset;
+    border-width: 2px;
+}
+
+/* margin for the description on index */
+figure{
+    margin-top: 15px;
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    margin-top: auto;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color:  rgb(103, 182, 231);
 }
