Update: Location history being saved

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -41,19 +41,22 @@ div {
     border-radius: 10px;
     margin-bottom: 30px;
     margin-left: 30px;
+    margin-right: 30px;
 }
 .c3{
     background-color: white;
     margin-left: 30px;
     border-radius: 10px;
-    margin-bottom: 30px;  
+    margin-bottom: 30px;
+    margin-right: 30px;
 }
 .c4{
     background-color: white;
     margin-left: 30px;
     margin-top: 20px;
     border-radius: 10px;
-    margin-bottom: 30px;  
+    margin-bottom: 30px;
+    margin-right: 30px;
 }
 
 h1{
